fixed some issues on swagger
