# Dtos/ErrorResponseDto.go
@@ -1,0 +1,5 @@
+package Dtos
+
+type ErrorResponseDto struct {
+	Error string `json:"error"`
+}
