# controllers/productController.go
@@ -1,26 +1,27 @@
 package controllers
 
 import (
+	"go-crud/Dtos"
 	"go-crud/config"
 	"go-crud/models"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
 // GetProducts godoc
-// @Summary      Get a product
+// @Summary      Get all product
 // @Description  add by json product
 // @Tags         products
 // @Accept       json
 // @Produce      json
-// @Param        product body models.Product true "Get a product"
-// @Success      200  {object} models.Product
+// @Success      200  {object} []models.Product
 // @Router       /products [get]
 func GetProducts(c *gin.Context) {
 	var products []models.Product
 	config.DB.Find(&products)
-	c.JSON(http.StatusOK, products)
+	c.JSON(http.StatusOK, Dtos.GenericResponseDto{Data: products})
 }
 
 // GetProduct godoc
@@ -29,17 +30,17 @@ func GetProducts(c *gin.Context) {
 // @Tags         products
 // @Accept       json
 // @Produce      json
-// @Param        product body models.Product true "Get a product"
+// @Param   id     path    int     true  "Product Id"
 // @Success      200  {object} models.Product
-// @Router       /products [get]
+// @Router       /products/{id} [get]
 func GetProduct(c *gin.Context) {
 	id := c.Param("id")
 	var product models.Product
 	if err := config.DB.First(&product, id).Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "product not found"})
+		c.JSON(http.StatusNotFound, Dtos.ErrorResponseDto{Error: "product not found"})
 		return
 	}
-	c.JSON(http.StatusOK, product)
+	c.JSON(http.StatusOK, Dtos.GenericResponseDto{Data: product})
 }
 
 // CreateProduct godoc
@@ -54,11 +55,11 @@ func GetProduct(c *gin.Context) {
 func CreateProduct(c *gin.Context) {
 	var product models.Product
 	if err := c.ShouldBindJSON(&product); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, Dtos.ErrorResponseDto{Error: err.Error()})
 		return
 	}
 	config.DB.Create(&product)
-	c.JSON(http.StatusCreated, product)
+	c.JSON(http.StatusCreated, Dtos.GenericResponseDto{Data: product})
 }
 
 // UpdateProduct godoc
@@ -67,22 +68,30 @@ func CreateProduct(c *gin.Context) {
 // @Tags         products
 // @Accept       json
 // @Produce      json
+// @Param        id   path      int  true  "Product Id"
 // @Param        product body models.Product true "Update product"
 // @Success      200  {object} models.Product
-// @Router       /products [put]
+// @Router       /products/{id} [put]
 func UpdateProduct(c *gin.Context) {
 	id := c.Param("id")
+	number64, err := strconv.ParseInt(id, 10, 64) // base 10, 64-bit
+	if err != nil {
+		c.JSON(http.StatusBadRequest, Dtos.ErrorResponseDto{Error: "Invalid Product Id"})
+		return
+	}
 	var product models.Product
 	if err := config.DB.First(&product, id).Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Product not found"})
+		c.JSON(http.StatusNotFound, Dtos.ErrorResponseDto{Error: "Product not found"})
 		return
 	}
 	if err := c.ShouldBindJSON(&product); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusBadRequest, Dtos.ErrorResponseDto{Error: err.Error()})
 		return
 	}
+
+	product.Id = int(number64)
 	config.DB.Save(&product)
-	c.JSON(http.StatusOK, product)
+	c.JSON(http.StatusOK, Dtos.GenericResponseDto{Data: product})
 }
 
 // DeleteProduct godoc
@@ -91,14 +100,15 @@ func UpdateProduct(c *gin.Context) {
 // @Tags         products
 // @Accept       json
 // @Produce      json
-// @Param        product body models.Product true "Delete product"
-// @Success      200  {object} models.Product
-// @Router       /products [delete]
+// @Param        id   path      int  true  "Product ID"
+// @Success      200  {object}  Dtos.GenericResponseDto
+// @Failure      400  {object}  Dtos.ErrorResponseDto
+// @Router       /products/{id} [delete]
 func DeleteProduct(c *gin.Context) {
 	id := c.Param("id")
 	if err := config.DB.Delete(&models.Product{}, id).Error; err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Delete failed"})
+		c.JSON(http.StatusBadRequest, Dtos.ErrorResponseDto{Error: "Delete failed"})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"message": "Product deleted"})
+	c.JSON(http.StatusOK, Dtos.GenericResponseDto{Message: "Product deleted", Data: true})
 }
